# LLMRepairCrawlerPublic

./: .gitignore  LICENSE  README.md
Backend/: backend.py  pyproject.toml
Backend/data/: apify_result.csv  datasets.json  styria.json  styria_proc.csv  styria_proc.json
Backend/src/: apify-crawler.py  llm.py  osm-crawler.py  site-crawler.py  utils.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.tsx  main.tsx
Frontend/src/api/: api.tsx
Frontend/src/components/map/: index.tsx  map.css
Frontend/src/components/searchbar/: index.tsx  searchbar.css
Frontend/src/utils/: utils.ts
