[tool.poetry]
name = "llmrepaircrawler"
version = "0.1.0"
description = ""
authors = ["Patrick Lovric <patrick.lovric@student.tugraz.at>", "Maximilian Theiner <maximilian.theiner@student.tugraz.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.165"
apify-client = "^1.0.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
flask = "^2.2.3"
flask-api = "^3.0.post1"
openai = "^0.27.6"
chromadb = "^0.3.22"
tiktoken = "^0.4.0"
flask-caching = "^2.0.2"
osmium = "^3.6.0"
flask-cors = "^3.0.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
